--- a/src/app/grupos/grupos.page.html
+++ b/src/app/grupos/grupos.page.html
@@ -1,13 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>grupos</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-buttons></app-buttons>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">grupos</ion-title>
+      <ion-title size="large">Grupos</ion-title>
     </ion-toolbar>
   </ion-header>
+  
+  <ion-list>
+    <ion-item *ngFor="let group of group$ | async; let i = index" >
+      <ion-avatar slot="start">
+        
+      </ion-avatar>
+      <ion-label class="ion-text-nowrap">
+        {{group.name}}
+      </ion-label>
+    </ion-item>
+  </ion-list>
+  <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando más..."></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+  
 </ion-content>
