--- a/src/app/personas/personas.page.html
+++ b/src/app/personas/personas.page.html
@@ -27,20 +27,9 @@
 
 
     <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-      <ion-fab-button>
+      <ion-fab-button (click)="onAddPerson()">
         <ion-icon name="add-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-list side="top">
-        <ion-fab-button>
-          <ion-icon name="document"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button>
-          <ion-icon name="color-palette"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button>
-          <ion-icon name="globe"></ion-icon>
-        </ion-fab-button>
-      </ion-fab-list>
     </ion-fab>
 
 </ion-content>
